1999-11-04    <shields@jikes.watson.ibm.com>

	Convert to use IBM Public License Version 1.0
	Make this version 1.2. The source files are unchanged except
	to change text related to the license name/version.
 
1999-02-10    <shields@jikes.watson.ibm.com>

	* Start ChangeLog.
	Just added *.am automake/autoconf files provided by Aaron Renn
	(arenn@urbanophile.com) as start toward support GNU's "configure"
	build process.
