@@ -1,3 +1,15 @@
+2001-09-05  Eric Blake  <ebb9@email.byu.edu>
+
+	* Makefile: Changed default from AIX to gcc (but it is
+	still hardcoded.  Anyone want to autoconfiscate this project?)
+	* ctabs.c (init_file, exit_file, exit_parser_files)
+	(print_definitions): 
+	* common.h: 
+	* globals.c: 
+	* lpgparse.c (options): 
+	* lpgparse.h: Added option jikes, to hack in headers
+	and footers to files generated by jikespg.
+
 1999-11-04    <shields@jikes.watson.ibm.com>
 
 	Convert to use IBM Public License Version 1.0
